--- a/index.html
+++ b/index.html
@@ -61,9 +61,11 @@
                     </div>
                     <div class="row justify-content-center fs-5 text-center">
                          <div class="col-md-4">
-                              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic voluptatum porro nemo earum dolor, officia doloribus quam voluptas tempore repudiandae.</p>
+                              <p>Hello! My name is Nuno Alwi Azimah, I'm a web developer</p>
                          </div>
-                         <div class="col-md-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat sint vel nam consequatur nisi quia porro nemo eius, autem magni! Quasi, officia! Accusantium, nemo labore?</div>
+                         <div class="col-md-4">
+                              <p>I really like web developers, because here I can train my creativity and logic, I will struggle in this field</p>
+                         </div>
                     </div>
                </div>
                <svg class="wave2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -86,44 +88,28 @@
                     </div>
                     <div class="row justify-content-center">
                          <div class="col-md-4 mb-3">
-                              <div class="card">
-                                   <img src="img/p4.jpg" class="card-img-top" alt="Projects 1" />
-                                   <div class="card-body">
-                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                   </div>
-                              </div>
-                         </div>
-                         <div class="col-md-4 mb-3">
-                              <div class="card">
+                              <a href=".." class="card text-dark text-decoration-none">
                                    <img src="img/p1.jpg" class="card-img-top" alt="Projects 1" />
                                    <div class="card-body">
-                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                        <p class="card-text">This is my previous web portfolio using Bootstrap 3</p>
                                    </div>
-                              </div>
+                              </a>
                          </div>
                          <div class="col-md-4 mb-3">
-                              <div class="card">
-                                   <img src="img/p5.jpg" class="card-img-top" alt="Projects 1" />
-                                   <div class="card-body">
-                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                   </div>
-                              </div>
-                         </div>
-                         <div class="col-md-4 mb-3">
-                              <div class="card">
-                                   <img src="img/p3.jpg" class="card-img-top" alt="Projects 1" />
-                                   <div class="card-body">
-                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                   </div>
-                              </div>
-                         </div>
-                         <div class="col-md-4 mb-3">
-                              <div class="card">
+                              <a href=".." class="card text-dark text-decoration-none">
                                    <img src="img/p2.jpg" class="card-img-top" alt="Projects 1" />
                                    <div class="card-body">
-                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                        <p class="card-text text-port">This is a web positioning exercise using css navite</p>
                                    </div>
-                              </div>
+                              </a>
+                         </div>
+                         <div class="col-md-4 mb-3">
+                              <a href=".." class="card text-dark text-decoration-none">
+                                   <img src="img/p3.jpg" class="card-img-top" alt="Projects 1" />
+                                   <div class="card-body">
+                                        <p class="card-text text-port">This is a web gallery that uses overlays and native CSS</p>
+                                   </div>
+                              </a>
                          </div>
                     </div>
                </div>
