--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     </div>
                     <div class="row justify-content-center">
                          <div class="col-md-4 mb-3">
-                              <a href=".." class="card text-dark text-decoration-none">
+                              <a href="https://kazuno0101.github.io/Portofolio-bs3/" class="card text-dark text-decoration-none">
                                    <img src="img/p1.jpg" class="card-img-top" alt="Projects 1" />
                                    <div class="card-body">
                                         <p class="card-text">This is my previous web portfolio using Bootstrap 3</p>
@@ -96,7 +96,7 @@
                               </a>
                          </div>
                          <div class="col-md-4 mb-3">
-                              <a href=".." class="card text-dark text-decoration-none">
+                              <a href="https://kazuno0101.github.io/position/" class="card text-dark text-decoration-none">
                                    <img src="img/p2.jpg" class="card-img-top" alt="Projects 1" />
                                    <div class="card-body">
                                         <p class="card-text text-port">This is a web positioning exercise using css navite</p>
@@ -104,7 +104,7 @@
                               </a>
                          </div>
                          <div class="col-md-4 mb-3">
-                              <a href=".." class="card text-dark text-decoration-none">
+                              <a href="https://kazuno0101.github.io/galeri/" class="card text-dark text-decoration-none">
                                    <img src="img/p3.jpg" class="card-img-top" alt="Projects 1" />
                                    <div class="card-body">
                                         <p class="card-text text-port">This is a web gallery that uses overlays and native CSS</p>
