--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
           <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous" />
 
           <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css" />
+
+          <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
           <link rel="stylesheet" href="style.css" />
           <title>Portofolio Kazuno</title>
      </head>
@@ -97,7 +100,7 @@
                          </div>
                          <div class="col-md-4 mb-3">
                               <a href="https://kazuno0101.github.io/position/" class="card text-dark text-decoration-none">
-                                   <img src="img/p2.jpg" class="card-img-top" alt="Projects 1" />
+                                   <img src="img/p2.jpg" class="card-img-top" alt="Projects 2" />
                                    <div class="card-body">
                                         <p class="card-text text-port">This is a web positioning exercise using css navite</p>
                                    </div>
@@ -105,9 +108,19 @@
                          </div>
                          <div class="col-md-4 mb-3">
                               <a href="https://kazuno0101.github.io/galeri/" class="card text-dark text-decoration-none">
-                                   <img src="img/p3.jpg" class="card-img-top" alt="Projects 1" />
+                                   <img src="img/p3.jpg" class="card-img-top" alt="Projects 3" />
                                    <div class="card-body">
                                         <p class="card-text text-port">This is a web gallery that uses overlays and native CSS</p>
+                                   </div>
+                              </a>
+                         </div>
+                    </div>
+                    <div class="row justify-content-center">
+                         <div class="col-md-4 mb-3">
+                              <a href="https://kazuno0101.github.io/Movie-maker/" class="card text-dark text-decoration-none">
+                                   <img src="img/p4.png" class="card-img-top" alt="Projects 4" />
+                                   <div class="card-body">
+                                        <p class="card-text">Movie search with API OMDB.</p>
                                    </div>
                               </a>
                          </div>
@@ -161,6 +174,12 @@
           <footer class="bg-warning text-center p-3">
                <p>Created with <i class="bi bi-suit-heart-fill text-white"></i> by <a class="text-dark fw-bold" href="https://www.instagram.com/kazuno_nuno/">Kazuno!</a></p>
           </footer>
+
+          <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+          <script>
+               AOS.init();
+          </script>
+
           <!-- End Footer -->
           <!-- Option 1: Bootstrap Bundle with Popper -->
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
